--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
         .delete {
             width: 85px;
             height: 30px;
-            border: 3px solid #E02F89;
+            background: #E02F89;
         }
 
         .delete:hover {
-            background: #E02F89;
+            border: 3px solid #3491EE;
         }
         .button-style:hover {
-            border: 3px solid #E02F89;
+            background: #E02F89;
         }
 
 
@@ -139,7 +139,6 @@
         </div>
         <div class="button-topping">
             <p>Начинка: </p>
-
             <button class="button-style" id="cheese">Сыр</button>
             <button class="button-style" id="salad">Салат</button>
             <button class="button-style" id="bacon">Бекон</button>
@@ -149,12 +148,13 @@
             <p>Дополнительно: </p>
             <button class="button-style mustard">Горчица</button>
             <button class="button-style ketchup">Кетчуп</button>
+            <button class="button-style delete"  id="delete">Убрать</button>
         </div>
 
     </div>
     <div class="price-calories">
         <p class="price">Цена: </p>
-        <p>Калории: </p>
+        <p class="calories">Калории: </p>
     </div>
 </div>
 
