--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
 
         .container {
-            width: 1400px;
+            width: 1550px;
             display: flex;
             justify-content: space-between;
             margin-top: 70px;
@@ -87,7 +87,7 @@
         }
 
         .delete {
-            width: 85px;
+            width: 120px;
             height: 30px;
             background: #E02F89;
         }
@@ -142,13 +142,13 @@
             <button class="button-style" id="cheese">Сыр</button>
             <button class="button-style" id="salad">Салат</button>
             <button class="button-style" id="bacon">Бекон</button>
-            <button class="button-style delete">Убрать</button>
+            <button class="button-style delete">Убрать все</button>
         </div>
         <div>
             <p>Дополнительно: </p>
             <button class="button-style mustard">Горчица</button>
             <button class="button-style ketchup">Кетчуп</button>
-            <button class="button-style delete"  id="delete">Убрать</button>
+            <button class="button-style delete"  id="delete">Убрать все</button>
         </div>
 
     </div>
